--- a/01_unity_catalog_data_governance.ipynb
+++ b/01_unity_catalog_data_governance.ipynb
@@ -6,6 +6,25 @@
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
      "inputWidgets": {},
+     "nuid": "2718a7a0-ca5a-4d27-b02e-abad673b3552",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "\n",
+    "<div style=\"text-align: center; line-height: 0; padding-top: 9px;\">\n",
+    "  <img src=https://raw.githubusercontent.com/aestaire/ml_workshop/refs/heads/main/files/images/hands-on.png>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
      "isMarkdownSandbox": true,
      "nuid": "d580dbd2-99d9-4498-ba74-f4a739370be8",
      "showTitle": false,
