--- a/02_feature_engineering.ipynb
+++ b/02_feature_engineering.ipynb
@@ -6,6 +6,25 @@
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
      "inputWidgets": {},
+     "nuid": "a4f9cdbe-162f-4024-be60-bf8005db4acf",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "\n",
+    "<div style=\"text-align: center; line-height: 0; padding-top: 9px;\">\n",
+    "  <img src=https://raw.githubusercontent.com/aestaire/ml_workshop/refs/heads/main/files/images/hands-on.png>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
      "nuid": "1250481a-e295-4095-8099-815f514f8f64",
      "showTitle": false,
      "tableResultSettingsMap": {},
