--- a/03_train_lightGBM.ipynb
+++ b/03_train_lightGBM.ipynb
@@ -6,6 +6,25 @@
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
      "inputWidgets": {},
+     "nuid": "65eb880b-c4d6-4329-98df-85b8b3a16119",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "\n",
+    "<div style=\"text-align: center; line-height: 0; padding-top: 9px;\">\n",
+    "  <img src=https://raw.githubusercontent.com/aestaire/ml_workshop/refs/heads/main/files/images/hands-on.png>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
      "nuid": "d908a078-38c9-4875-a5b7-303827487d86",
      "showTitle": false,
      "tableResultSettingsMap": {},
