--- a/08_AutoML.ipynb
+++ b/08_AutoML.ipynb
@@ -6,7 +6,7 @@
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
      "inputWidgets": {},
-     "nuid": "0a7f3ad5-54a1-40ef-b8d9-775aeab58108",
+     "nuid": "32f19565-158c-432c-a28d-e8e632eec75d",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -26,14 +26,17 @@
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
      "inputWidgets": {},
-     "nuid": "89237d35-7412-4603-b9b8-9f1ae31c046b",
+     "nuid": "2f3ceaf7-74e7-49e0-b94e-c1a64033c47e",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "Añadir screenshots del paso a paso para crear un modelo con automl\n",
+    "https://e2-demo-field-eng.cloud.databricks.com/ml/experiments/3825708664100268/runs?o=1444828305810485&searchFilter=&orderByKey=metrics.%60test_f1_score%60&orderByAsc=false&startTime=ALL&lifecycleFilter=Active&modelVersionFilter=All+Runs&datasetsFilter=W10%3D"
+   ]
   }
  ],
  "metadata": {
@@ -49,7 +52,7 @@
    "notebookMetadata": {
     "pythonIndentUnit": 2
    },
-   "notebookName": "07_kubernetes",
+   "notebookName": "08_AutoML",
    "widgets": {}
   },
   "language_info": {
