--- a/09_AI_functions.ipynb
+++ b/09_AI_functions.ipynb
@@ -13,7 +13,10 @@
     }
    },
    "source": [
-    "![](https://raw.githubusercontent.com/Databricks-BR/workshop_agents/refs/heads/main/demo-main/img/header_workshop.png)"
+    "\n",
+    "<div style=\"text-align: center; line-height: 0; padding-top: 9px;\">\n",
+    "  <img src=https://raw.githubusercontent.com/aestaire/ml_workshop/refs/heads/main/files/images/hands-on.png>\n",
+    "</div>"
    ]
   },
   {
@@ -342,7 +345,7 @@
    "notebookMetadata": {
     "pythonIndentUnit": 2
    },
-   "notebookName": "08_AI_functions",
+   "notebookName": "09_AI_functions",
    "widgets": {}
   },
   "language_info": {
