--- a/10_agentbricks.ipynb
+++ b/10_agentbricks.ipynb
@@ -1,6 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "e9612b68-4d71-48b8-a1b7-0079308b156b",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "\n",
+    "<div style=\"text-align: center; line-height: 0; padding-top: 9px;\">\n",
+    "  <img src=https://raw.githubusercontent.com/aestaire/ml_workshop/refs/heads/main/files/images/hands-on.png>\n",
+    "</div>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 0,
    "metadata": {
@@ -14,7 +33,10 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "1. buscar datos de prueba\n",
+    "2. Añadir paso a paso con screenshots para crear un knowledge assistant"
+   ]
   }
  ],
  "metadata": {
@@ -30,7 +52,7 @@
    "notebookMetadata": {
     "pythonIndentUnit": 2
    },
-   "notebookName": "09_agentbricks",
+   "notebookName": "10_agentbricks",
    "widgets": {}
   },
   "language_info": {
