--- a/00_mlops_end2end_presentation.ipynb
+++ b/00_mlops_end2end_presentation.ipynb
@@ -152,19 +152,17 @@
       "byteLimit": 2048000,
       "rowLimit": 10000
      },
+     "collapsed": true,
      "inputWidgets": {},
      "nuid": "45a19354-fc2f-4400-8731-ad110d4ced9c",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
-    },
-    "jupyter": {
-     "outputs_hidden": true
     }
    },
    "outputs": [],
    "source": [
-    "%run ../_resources/00-setup"
+    "%run ./_resources/00-setup"
    ]
   },
   {
@@ -218,9 +216,19 @@
  ],
  "metadata": {
   "application/vnd.databricks.v1+notebook": {
-   "computePreferences": null,
+   "computePreferences": {
+    "hardware": {
+     "accelerator": null,
+     "gpuPoolId": null,
+     "memory": null
+    }
+   },
    "dashboards": [],
    "environmentMetadata": {
+    "base_environment": "",
+    "dependencies": [
+     "mlflow"
+    ],
     "environment_version": "2"
    },
    "inputWidgetPreferences": null,
