--- a/01_unity_catalog_data_governance.ipynb
+++ b/01_unity_catalog_data_governance.ipynb
@@ -183,7 +183,7 @@
    },
    "outputs": [],
    "source": [
-    "%run ../_resources/00-setup $reset_all_data=false"
+    "%run ./_resources/00-setup $reset_all_data=false"
    ]
   },
   {
@@ -572,7 +572,8 @@
    },
    "dashboards": [],
    "environmentMetadata": {
-    "environment_version": "2"
+    "base_environment": "",
+    "environment_version": "4"
    },
    "inputWidgetPreferences": null,
    "language": "sql",
