--- a/03_train_lightGBM.ipynb
+++ b/03_train_lightGBM.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "65eb880b-c4d6-4329-98df-85b8b3a16119",
      "showTitle": false,
@@ -23,7 +26,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "d908a078-38c9-4875-a5b7-303827487d86",
      "showTitle": false,
@@ -46,7 +52,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "56c046b5-fda8-4f7e-b9fb-f8e86486c959",
      "showTitle": false,
@@ -64,7 +73,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "7b72e05b-9bbe-4db3-b232-1f3ffe466a0a",
      "showTitle": false,
@@ -123,14 +135,17 @@
    },
    "outputs": [],
    "source": [
-    "%run ../_resources/00-setup"
+    "%run ./_resources/00-setup"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "0dc7acf7-5a7a-40ed-89c0-592e71e0e645",
      "showTitle": false,
@@ -181,7 +196,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "efec93a7-72f2-45f4-bd5c-8d4e1364f736",
      "showTitle": false,
@@ -263,7 +281,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "946d83b3-0945-4ba8-95b2-0fcb2d49a6ea",
      "showTitle": false,
@@ -279,7 +300,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "a8eb27cd-16e5-4514-83de-fa8a2a36d91f",
      "showTitle": false,
@@ -332,7 +356,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "2ff52cc9-0b0c-4785-8117-f14fa95bbde4",
      "showTitle": false,
@@ -383,7 +410,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "c0a2e2b5-f9f6-4486-8221-b8ffbeaa292c",
      "showTitle": false,
@@ -399,7 +429,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "e353d36f-4ec6-4445-b5b0-fcf2ad3df9d0",
      "showTitle": false,
@@ -447,7 +480,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "468515e7-383a-4d05-97e8-cf6946a767a1",
      "showTitle": false,
@@ -456,7 +492,7 @@
     }
    },
    "source": [
-    "### Agrupar em um único pipeline"
+    "### Agrupar en un único pipeline"
    ]
   },
   {
@@ -485,7 +521,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "c139593f-c6cf-4e81-90d5-7e0cd359bbd0",
      "showTitle": false,
@@ -533,7 +572,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "8973d506-8137-4e8b-894e-d04910672286",
      "showTitle": false,
@@ -578,7 +620,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "0f39d56e-17b4-4535-9f86-146be2ee25c6",
      "showTitle": false,
@@ -677,7 +722,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "139ee988-70d0-4b0b-a0fc-69cfe48432ed",
      "showTitle": false,
@@ -800,7 +848,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "cc8618c4-293c-48c8-a63c-f3deca0a3d34",
      "showTitle": false,
@@ -893,7 +944,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "00f23f1a-0591-433f-96b7-779ffd5c737d",
      "showTitle": false,
@@ -931,7 +985,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "66d033ed-566f-423d-a804-11e3f48890b0",
      "showTitle": false,
@@ -969,7 +1026,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "f30e25cb-10bc-47d0-93d4-dd929320bf3e",
      "showTitle": false,
@@ -1007,7 +1067,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "7463067d-c2b6-4036-8c60-307d1dcbfbbb",
      "showTitle": false,
@@ -1024,9 +1087,19 @@
  ],
  "metadata": {
   "application/vnd.databricks.v1+notebook": {
-   "computePreferences": null,
+   "computePreferences": {
+    "hardware": {
+     "accelerator": null,
+     "gpuPoolId": null,
+     "memory": null
+    }
+   },
    "dashboards": [],
    "environmentMetadata": {
+    "base_environment": "",
+    "dependencies": [
+     "lightgbm"
+    ],
     "environment_version": "2"
    },
    "inputWidgetPreferences": null,
