--- a/04_from_notebook_to_models_in_uc.ipynb
+++ b/04_from_notebook_to_models_in_uc.ipynb
@@ -156,14 +156,17 @@
    },
    "outputs": [],
    "source": [
-    "%run ../_resources/00-setup"
+    "%run ./_resources/00-setup"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "c7186976-255e-411d-9af1-0512fb49ab75",
      "showTitle": false,
@@ -286,7 +289,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "20d7a318-760f-4bd9-8c5e-7ef12d13a405",
      "showTitle": false,
@@ -329,7 +335,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "ca0b3555-009e-4bca-9cb9-1f3c98143a15",
      "showTitle": false,
@@ -345,7 +354,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "fc51a94e-304e-4403-8fd4-3107d9409bd3",
      "showTitle": false,
@@ -393,7 +405,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "9a8de63a-6b78-4486-8416-81b8736c66fc",
      "showTitle": false,
@@ -447,7 +462,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "11f09b05-6e34-4d31-a7d7-bc92721fe546",
      "showTitle": false,
@@ -493,7 +511,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "a8b92ed8-1a00-4b08-b68a-cafa5e1dc976",
      "showTitle": false,
@@ -510,7 +531,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "00961c01-c52f-4074-a818-a4fe583837ba",
      "showTitle": false,
@@ -531,10 +555,17 @@
  ],
  "metadata": {
   "application/vnd.databricks.v1+notebook": {
-   "computePreferences": null,
+   "computePreferences": {
+    "hardware": {
+     "accelerator": null,
+     "gpuPoolId": null,
+     "memory": null
+    }
+   },
    "dashboards": [],
    "environmentMetadata": {
-    "environment_version": "2"
+    "base_environment": "",
+    "environment_version": "4"
    },
    "inputWidgetPreferences": null,
    "language": "python",
