--- a/02_feature_engineering.ipynb
+++ b/02_feature_engineering.ipynb
@@ -122,7 +122,7 @@
    },
    "outputs": [],
    "source": [
-    "%run ../_resources/00-setup"
+    "%run ./_resources/00-setup"
    ]
   },
   {
@@ -446,7 +446,13 @@
  ],
  "metadata": {
   "application/vnd.databricks.v1+notebook": {
-   "computePreferences": null,
+   "computePreferences": {
+    "hardware": {
+     "accelerator": null,
+     "gpuPoolId": null,
+     "memory": null
+    }
+   },
    "dashboards": [],
    "environmentMetadata": {
     "environment_version": "2"
@@ -455,7 +461,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 3873581079779473,
+     "commandId": 3790605029824676,
      "dataframes": [
       "_sqldf"
      ]
