--- a/04_from_notebook_to_models_in_uc.ipynb
+++ b/04_from_notebook_to_models_in_uc.ipynb
@@ -565,6 +565,9 @@
    "dashboards": [],
    "environmentMetadata": {
     "base_environment": "",
+    "dependencies": [
+     "mlflow-skinny[databricks]"
+    ],
     "environment_version": "4"
    },
    "inputWidgetPreferences": null,
