--- a/00_mlops_end2end_presentation.ipynb
+++ b/00_mlops_end2end_presentation.ipynb
@@ -84,6 +84,43 @@
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
      "inputWidgets": {},
+     "nuid": "ec8afb31-5f57-44f4-8236-5cb84a305510",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "### Utilice un cluster Serverless Environment 2 para ejecutar este notebook\n",
+    "Para ejecutar esta demostración, simplemente selecciona el cluster `Serverless` en el menú desplegable.\n",
+    "Comprueba que la versión del cluster serverless es la número 2 <br />\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "3251bc47-22fb-4066-8982-f8ab7d841b9d",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "\n",
+    "<div style=\"text-align: center; line-height: 0; padding-top: 9px;\">\n",
+    "  <img src=https://raw.githubusercontent.com/aestaire/ml_workshop/refs/heads/main/files/images/version2-serverless.png>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
      "nuid": "61854221-a62e-4c1c-bd3a-72bdf31b8670",
      "showTitle": false,
      "tableResultSettingsMap": {},
