--- a/04_from_notebook_to_models_in_uc.ipynb
+++ b/04_from_notebook_to_models_in_uc.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "b8cf3dff-08cd-44fc-bc3c-b24442b8ce72",
      "showTitle": false,
@@ -23,7 +26,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "7074914a-d886-4905-8429-6ecd6734e4be",
      "showTitle": false,
@@ -58,7 +64,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "95468e2d-28fd-470a-af7b-0e377a9ee610",
      "showTitle": false,
@@ -76,7 +85,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "fe2e86a3-54a7-4df2-b3bb-94f2db6789a5",
      "showTitle": false,
@@ -97,7 +109,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "1ccf1e59-73b1-4013-8126-eff15bbd3520",
      "showTitle": false,
@@ -557,7 +572,7 @@
   "application/vnd.databricks.v1+notebook": {
    "computePreferences": {
     "hardware": {
-     "accelerator": null,
+     "accelerator": "A10",
      "gpuPoolId": null,
      "memory": null
     }
