--- a/05_challenger_validation.ipynb
+++ b/05_challenger_validation.ipynb
@@ -67,6 +67,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "8c4fc80b-c999-46b1-ad40-3224a9f8d810",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "dbdemos.create_cluster('mlops-end2end')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
@@ -161,7 +179,7 @@
    },
    "outputs": [],
    "source": [
-    "%run ../_resources/00-setup"
+    "%run ./_resources/00-setup"
    ]
   },
   {
@@ -233,14 +251,17 @@
    },
    "outputs": [],
    "source": [
-    "%run ../_resources/00-setup"
+    "%run ./_resources/00-setup"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "0359b32c-e9af-46f8-9ec6-bf41da6c0c4c",
      "showTitle": false,
@@ -287,7 +308,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "57d56a9f-66b4-4ba7-bb11-957fe7a04a27",
      "showTitle": false,
@@ -303,7 +327,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "fdb0a129-dd10-4e6d-ae6a-8876ad79180a",
      "showTitle": false,
@@ -353,7 +380,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "702d7855-9121-46d6-856f-9c64106b4768",
      "showTitle": false,
@@ -411,7 +441,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "a2bdf925-3491-47e7-b966-62a9f920ae12",
      "showTitle": false,
@@ -529,7 +562,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "091baf36-f35b-464d-a535-d35589cbf4f0",
      "showTitle": false,
@@ -569,7 +605,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "508b66d9-af08-4579-b447-e3e2b84b12d5",
      "showTitle": false,
@@ -616,7 +655,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "cd8bd97a-9526-4d99-be73-af5ff47d456b",
      "showTitle": false,
@@ -635,7 +677,13 @@
  ],
  "metadata": {
   "application/vnd.databricks.v1+notebook": {
-   "computePreferences": null,
+   "computePreferences": {
+    "hardware": {
+     "accelerator": null,
+     "gpuPoolId": null,
+     "memory": null
+    }
+   },
    "dashboards": [],
    "environmentMetadata": {
     "environment_version": "2"
